[package]
name = "TMP"
version = "0.0.1"
authors = ["DrHam"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.59"
wasm-bindgen-futures = "*"
serde = "1.0.104"
serde_derive = "1.0.104"
reqwest = { version = "0.10.4", features = ["json"] }
serde_json = "1.0.44"
console_error_panic_hook = "0.1.6"


[dependencies.web-sys]
version = "0.3.4"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]

